clusters/talos-cluster/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw-service
  namespace: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
